# exp-rs

./: .clangd  .envrc  .gitignore  ARENA_IMPLEMENTATION_SUMMARY.md  ARENA_STATUS.md  Cargo.toml  DOCTEST_FIX_SUMMARY.md  README.md  TEST_ANALYSIS.md  build.rs  build_no_libm.sh  cbindgen.toml  debug_test.rs  meson.build  meson_options.txt  run_qemu_tests.sh  run_tests.sh  rust-toolchain.toml
.cargo/: config.toml
.claude/: config.json  settings.local.json
.docs-cache/: .rustc_info.json  .rustdoc_fingerprint.json  docs_cache.json
.docs-cache/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
.docs-cache/doc/bitflags/: all.html  index.html  macro.bitflags.html  macro.bitflags_match.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
.docs-cache/doc/bumpalo/: all.html  enum.AllocOrInitError.html  index.html  macro.format.html  macro.vec.html  sidebar-items.js  struct.AllocErr.html  struct.Bump.html  struct.ChunkIter.html  struct.ChunkRawIter.html
.docs-cache/doc/byteorder/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  type.BE.html  type.LE.html  type.NativeEndian.html  type.NetworkEndian.html
.docs-cache/doc/exp_rs/: all.html  index.html  macro.assert_approx_eq.html  sidebar-items.js  struct.Box.html  struct.String.html  struct.Vec.html  trait.ToString.html  type.Real.html
.docs-cache/doc/hash32/: all.html  index.html  struct.BuildHasherDefault.html  struct.FnvHasher.html  struct.Murmur3Hasher.html  trait.Hasher.html
.docs-cache/doc/heapless/: all.html  enum.Entry.html  index.html  struct.Deque.html  struct.HistoryBuffer.html  struct.IndexMap.html  struct.IndexMapIter.html  struct.IndexMapIterMut.html  struct.IndexMapKeys.html  struct.IndexMapValues.html  struct.IndexMapValuesMut.html  struct.IndexSet.html  struct.IndexSetIter.html  struct.LinearMap.html  struct.OccupiedEntry.html  struct.OldestOrdered.html  struct.String.html  struct.VacantEntry.html  struct.Vec.html  type.FnvIndexMap.html  type.FnvIndexSet.html
.docs-cache/doc/libm/: fn.acos.html  (+124 more)
bench_results/: 20250729_154710.txt  20250804_004043.txt  20250804_005454.txt  20250805_134903_0d250de.txt  20250805_135016_060547e.txt  arena_comparison.md  arena_comparison_actual.md  arena_comparison_final.md  before_after_arena_comparison.md  evolution_comparison.md
benches/: arena_consolidated_benchmark.rs  arena_memory_bench.rs  batch_benchmark.rs  consolidated_benchmark.rs  context_memory_analysis.rs  native_benchmark.rs  simple_arena_bench.rs
docs/: arena_c_performance_comparison.md  arena_implementation_checkpoint.md  arena_implementation_complete.md  arena_implementation_final_status.md  arena_implementation_plan.md  arena_implementation_progress.md  arena_implementation_status.md  arena_implementation_summary.md  arena_incremental_plan.md  arena_performance_corrected.md  arena_performance_explained.md  arena_performance_full_comparison.md  ast_cloning_optimization_analysis.md  batch_processing_plan.md  ffi_naming_proposal.md  heapless_migration_plan.md  iterative_evaluator_implementation_plan.md  iterative_evaluator_summary.md  logical_operators_implementation_plan.md  setup_time_comparison.md  setup_time_final_analysis.md  zero_allocation_implementation_plan.md
examples/: analyze_difference.rs  arena_demo.rs  basic.rs  benchmark_compare.rs  debug_semicolon.rs  eval_context.rs  exact_comparison.rs  setup_timing.rs  timing_comparison.rs
include/: exp_rs.h
proptest-regressions/: expression.txt  expression_function_proptest.txt
qemu_test/: batch_performance_test.c  benchmark.c  benchmark_expressions.txt  cmsis_dsp_benchmark.c  cmsis_dsp_test.c  eval_context.c  exp_rs_cmsis_benchmark.c  exp_rs_integration_test.c  meson.build  meson_options.txt  register_test_functions.c  register_test_functions.h  test_batch_builder.c  test_batch_memory.c  test_batch_param_order.c  test_ffi.c  test_ffi_simple.c  test_native_function.c  test_native_function_simple.c  test_setup_timing.c
qemu_test/qemu_harness/: meson.build  qemu_test_harness.c  qemu_test_harness.h  vector_table_m7.c
src/: batch_builder.rs  context.rs  engine.rs  error.rs  eval.rs  eval.rs.bak  eval_old.rs  evaluator.rs  expression.rs  expression_functions.rs  ffi.rs  ffi.rs.backup  functions.rs  lexer.rs  lib.rs  test_expr_func_arena.rs  test_utils.rs  types.rs
src/eval/: ast.rs  context_stack.rs  custom_function.rs  evaluator.rs  iterative.rs  mod.rs  recursion.rs  stack_ops.rs  types.rs
src/ffi/: arena_pool.rs
subprojects/packagefiles/cmsis-dsp/: meson_options.txt
targets/: cortex-m7-strict.json
tests/: arena_basic_test.rs  arena_test.rs  comparison_operators_test.rs  comprehensive_arena_test.rs  debug_parsing.rs  expression_factorial_test.rs  expression_function_arena_test.rs  expression_function_proptest.rs  ffi_expression_function_validation_test.rs  integration.rs  iterative_eval_test.rs  lib.rs  lib.rs.bak  logical_operators_test.rs  recursion_depth_test.rs  recursion_limit_test.rs  recursion_test.rs  safe_recursion.rs  simple_factorial_test.rs  temp_debug_option51.rs  test_empty_context.rs  test_helpers.rs  test_recursion.rs  unary_test.rs  unit.rs
tests_native_c/: common_allocator.c  common_allocator.h  compile_arena_test.sh  debug_allocations.out  example_multichannel.c  meson.build  test_arena_ffi.c  test_arena_integration  test_arena_integration.c  test_batch_allocations.c  test_batch_api.c  test_batch_builder_memory  test_batch_builder_memory.c  test_batch_clear.c  test_batch_eval  test_batch_eval.c  test_batch_memory_tracking.c  test_batch_with_sin.c  test_bulk_timing.c  test_clear_then_free.c  test_context_memory.c  test_detailed_timing  test_detailed_timing.c  test_direct_batch_alloc.c  test_double_free.c  test_embedded_pool.c  test_embedded_pool_.c  test_empty_context.c  test_error_handling.c  test_expression_functions.c  test_memory_analysis.c  test_memory_management.c  test_memory_management_old.c  test_microbenchmark  test_microbenchmark.c  test_nanotime_setup  test_nanotime_setup.c  test_panic_handler.c  test_pattern_isolation.c  test_performance.c  (+16 more)
(+1406 files in other folders)
