[package]
name = "exp-rs"
authors = ["Tenkai Kariya <tenkai@zetaohm.com>"]
repository = "https://github.com/cosmikwolf/exp-rs"
homepage = "https://github.com/cosmikwolf/exp-rs"
documentation = "https://docs.rs/exp-rs"
edition = "2024"
version = "0.1.0"
description = "no_std expression parser, compiler, and evaluation engine for math expressions designed for embedded, with qemu examples"
keywords = ["exp-rs", "math", "expression", "parser"]
license = "MIT/Apache-2.0"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
bitflags = "2.9.0"
libm = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], default-features = false }
hashbrown = "0.15.2"

[features]
default = ["f64", "libm"]
f32 = []
f64 = []
libm = ["dep:libm"]
custom_cbindgen_alloc = [
] # Use exp_rs_malloc and exp_rs_free instead of malloc/free

# Ensure only one of f32 or f64 can be enabled at a time
# This is enforced by mutually exclusive features
# If both are enabled, emit a compile_error!
[package.metadata]
exclusive-features = ["f32", "f64"]


[profile.release]
panic = "abort"
opt-level = "z"   # Optimize for size on embedded systems
lto = true        # Enable link-time optimization
codegen-units = 1 # Use single codegen unit for better optimization
debug = false     # Disable debug info to reduce binary size

[profile.dev]
panic = "abort"

[build-dependencies]
cbindgen = "0.28"
