[package]
name = "exp-rs"
authors = ["Tenkai Kariya <tenkai@zetaohm.com>"]
repository = "https://github.com/cosmikwolf/exp-rs"
homepage = "https://github.com/cosmikwolf/exp-rs"
documentation = "https://docs.rs/exp-rs"
edition = "2024"
version = "0.1.0"
description = "no_std expression parser, compiler, and evaluation engine for math expressions designed for embedded, with qemu examples"
keywords = ["exp-rs", "math", "expression", "parser"]
license = "MIT/Apache-2.0"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
heapless = { version = "0.8.0", default-features = false }
hash32 = "0.2.1"
bitflags = "2.9.0"
libm = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], default-features = false }
bumpalo = { version = "3.16", default-features = false, features = [
  "collections",
] }
embedded-alloc = { version = "0.6", features = ["tlsf"] }
critical-section = { version = "1.2", features = ["restore-state-u32"] }
[features]
default = ["libm"]
f32 = []
libm = ["dep:libm"]
custom_cbindgen_alloc = [
] # Use exp_rs_malloc and exp_rs_free instead of malloc/free

# Note: 64-bit floating point is now the default when f32 is not enabled
# When f32 feature is enabled, 32-bit floating point is used instead


[profile.release]
panic = "abort"
opt-level = "s"   # Optimize for size - generates more alignment-friendly code
lto = true        # Enable link-time optimization
codegen-units = 1 # Use single codegen unit for better optimization
debug = true      # Keep debug info for debugging

[profile.dev]
panic = "abort"
opt-level = 2     # Optimize for size on embedded systems
lto = true        # Enable link-time optimization
codegen-units = 1 # Use single codegen unit for better optimization
debug = true

[profile.bench]
opt-level = 0      # No optimization for debugging
debug = true       # Keep debug symbols
lto = false        # Disable LTO for faster builds
codegen-units = 16 # Default codegen units

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
criterion = "0.5"
proptest = "1.7"

[[bench]]
name = "consolidated_benchmark"
harness = false

[[bench]]
name = "simple_arena_bench"
harness = false

[[bench]]
name = "arena_memory_bench"
harness = false

[[bench]]
name = "arena_consolidated_benchmark"
harness = false
