option(
  'build_target',
  type: 'combo',
  choices: ['exp_rs_qemu_tests', 'library'],
  value: 'exp_rs_qemu_tests',
  description: 'Which target to build',
)

option(
  'enable_f64',
  type: 'boolean',
  value: false,
  description: 'Enable 64-bit floating point (double precision) support in CMSIS-DSP',
)

option(
  'enable_exprs_qemu_tests',
  type: 'boolean',
  value: false,
  description: 'Enables building of qemu tests',
)
