option(
  'use_f32',
  type: 'boolean',
  value: false,
  description: 'Enable 64-bit floating point (double precision) support in CMSIS-DSP',
)

option(
  'custom_cbindgen_alloc',
  type: 'boolean',
  value: false,
  description: 'Use custom allocation functions (exp_rs_malloc/exp_rs_free) instead of stdlib',
)

option(
  'enable_exprs_qemu_tests',
  type: 'boolean',
  value: false,
  description: 'Enables building of qemu tests',
)

option(
  'test_native',
  type: 'boolean',
  value: false,
  description: 'Enable building and running native C tests',
)

option(
  'alloc_tracking',
  type: 'boolean',
  value: false,
  description: 'Enable detailed allocation tracking with caller information',
)
